--- a/src/static/index.html
+++ b/src/static/index.html
@@ -15,6 +15,13 @@
     <main>
       <section id="activities-container">
         <h3>Available Activities</h3>
+        <div id="activity-controls" style="margin-bottom: 20px;">
+          <input type="text" id="activity-search" placeholder="Search activities..." style="padding: 8px; width: 60%; max-width: 250px; margin-right: 10px;" />
+          <select id="activity-sort" style="padding: 8px;">
+            <option value="name">Sort by Name</option>
+            <option value="schedule">Sort by Schedule</option>
+          </select>
+        </div>
         <div id="activities-list">
           <!-- Activities will be loaded here -->
           <p>Loading activities...</p>
